--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 DDServiceDemo/DDServiceDemo.xcodeproj/project.xcworkspace/xcshareddata/DDServiceDemo.xccheckout
+
+DDServiceDemo/DDServiceDemo.xcodeproj/xcuserdata/panda.xcuserdatad/xcschemes/xcschememanagement.plist
+
+DDServiceDemo/DDServiceDemo.xcodeproj/project.xcworkspace/xcuserdata/panda.xcuserdatad/UserInterfaceState.xcuserstate
